# The-AGI-Assistant

./: .gitattributes  .gitignore  AWS_INTEGRATION_README.md  CLAUDE.md  DOCUMENT_UPLOAD_IMPLEMENTATION.md  LICENSE  PERMISSION_FIX_SUMMARY.md  PROFILE_SYNC_IMPLEMENTATION.md  README.md  config.toml  env.example  package-lock.json  package.json  supabase_migration_add_preferences.sql  test-file-system.js  test_document.txt  test_file_upload.js
.github/workflows/: build.yml
downloads/: README.md
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/src/: chat-logger.ts  google-oauth-checker.ts  google-workspace-mcp.ts  mcp-config.ts  mcp-server-manager.ts  rate-limiter.ts  server.ts  smart-mcp-agent.ts  transcript-api.ts  transcript-storage.ts  transcript-timer.ts
sidecar/src/parsing/: message-extraction.ts
src/: global.css  main.tsx  theme-provider.tsx
src-tauri/: 2  Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: aws_uploader.rs  extract.rs  file_storage.rs  google_oauth.rs  lib.rs  main.rs  pii_scrubber.rs
src/components/: SearchingIndicator.tsx  ToolCallCard.tsx
src/components/advanced/: AdvancedSettingsPage.tsx
src/components/auth/: AuthForm.tsx  LandingPage.tsx  LoginPage.tsx
src/components/integrations/: integrationDefinitions.tsx
src/components/profile/: ProfilePage.tsx
src/components/settings/: ChatHistorySettings.tsx  Disclaimer.tsx  FileUploadFallback.tsx  FileUploadSettings.tsx  TauriFileUpload.tsx  index.tsx  index.tsx.backup
src/components/ui/: button.tsx  dialog.tsx  spotlight.tsx
src/config/: constants.ts
src/contexts/: AuthContext.tsx  CompletionScope.tsx
src/hooks/: useCompletion.ts
src/lib/: files.ts  index.ts  notifications.tsx  personas.ts  storage.ts  supabase.ts
src/routes/: Auth.tsx
src/types/: completion.ts  file-storage.ts  settings.ts  user.ts
